# passepartout

./: Cargo.toml  README.md
src/: clipboard.rs  error.rs  event.rs  lib.rs  operations.rs  pass.rs  password_info.rs  password_store.rs
src/pass/: cryptography.rs  operations.rs  password_info.rs  password_store.rs
src/pass/cryptography/: sequoia.rs
