[package]
name = "passepartout"
version = "0.1.6"
edition = "2021"
description = "Library for pass"
authors = ["Karl Felix Schewe"]
readme = "README.md"
license = "LGPL-2.1"
repository = "https://github.com/kardwen/passepartout"
keywords = ["pass"]
categories = ["authentication", "cryptography"]

[dependencies]
arboard = { version = "3.4.1", features = ["wayland-data-control"] }
dirs = "6.0.0"
gpgme = "0.11.0"
icu = "1.5.0"
thiserror = "2.0.4"
totp-rs = { version = "5.6.0", features = ["otpauth"] }
